# PROJETO-API-BolaMarcada

./: .dockerignore  Jenkinsfile  backup.txt  docker-compose.ci.yml  docker-compose.yml  dockerfile  main.py  pyproject.toml  pytest.ini  setup.py
alembic/versions/: 2b6a8a2f9a01_make_cpf_nullable.py
models/: models.py
routes/: availability_routes.py  booking_routes.py  field_routes.py  oauth_routes.py  sports_center_routes.py  user_routes.py
schemas/: availability_schemas.py  booking_schemas.py  field_schemas.py  user_schemas.py
scripts/: shell.sh  upload_github_release.sh
services/: availability_service.py  booking_service.py  review_service.py  sports_center_service.py
tests/: auth_test.py  field_test.py  test_oauth_google.py
